--- a/bookshop-demo/bff/k8s/bff.yaml
+++ b/bookshop-demo/bff/k8s/bff.yaml
@@ -34,9 +34,24 @@ spec:
     spec:
       containers:
       - name: bff
-        image: gihyo-ms-dev-book/bff:0.1
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.2-reliability/bff
         env:
         - name: CATALOGUE_CLIENT_URI
           value: "catalogue:50051"
+        - name: ORDER_CLIENT_URI
+          value: "order:50052"
         ports:
         - containerPort: 4000
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 4000
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 4000
+          initialDelaySeconds: 5
+          periodSeconds: 5
+
