--- a/bookshop-demo/frontend/k8s/frontend.yaml
+++ b/bookshop-demo/frontend/k8s/frontend.yaml
@@ -34,6 +34,18 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: gihyo-ms-dev-book/frontend:0.1
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.2-reliability/frontend
         ports:
         - containerPort: 80
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
