--- a/bookshop-demo/order/k8s/order.yaml
+++ b/bookshop-demo/order/k8s/order.yaml
@@ -1,50 +1,52 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalogue
+  name: order
 spec:
   selector:
-    app: catalogue
+    app: order
   ports:
-  - name: grpc-catalogue
+  - name: grpc-order
     protocol: TCP
-    port: 50051
-    targetPort: 50051
+    port: 50052
+    targetPort: 50052
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: catalogue
+  name: order
   labels:
-    app: catalogue
+    app: order
     version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: catalogue
+      app: order
       version: v1
   template:
     metadata:
       labels:
-        app: catalogue
+        app: order
         version: v1
     spec:
       containers:
-      - name: catalogue
-        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.2-reliability/catalogue
+      - name: order
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.2-reliability/order
         env:
         - name: DATABASE
-          value: "catalogue_user:default_password@tcp(catalogue-db:3306)/booksdb"
+          value: "mongodb://order-db:27017/orders"
+        - name: RABBITMQ
+          value: "amqp://guest:guest@rabbitmq:5672/"
         ports:
-        - containerPort: 50051
+        - containerPort: 50052
         livenessProbe:
           grpc:
-            port: 50051
+            port: 50052
           initialDelaySeconds: 10
         readinessProbe:
           grpc:
-            port: 50051
+            port: 50052
           initialDelaySeconds: 10
