--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ COPY package* ./
 RUN npm install
 COPY public ./public
 COPY src ./src
+COPY .env.production ./
 RUN npm run build
 
 FROM nginx:alpine
