--- a/bookshop-demo/order/k8s/order.yaml
+++ b/bookshop-demo/order/k8s/order.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - name: order
-        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.2-reliability/order
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.3-servicemesh/order
         env:
         - name: DATABASE
           value: "mongodb://order-db:27017/orders"
