--- a/bookshop-demo/shipping/k8s/shipping.yaml
+++ b/bookshop-demo/shipping/k8s/shipping.yaml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: shipping
-        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.2-reliability/shipping
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.3-servicemesh/shipping
         env:
         - name: RABBITMQ
           value: "amqp://guest:guest@rabbitmq:5672/"
