--- a/bookshop-demo/frontend/k8s/frontend-v2.yaml
+++ b/bookshop-demo/frontend/k8s/frontend-v2.yaml
@@ -19,6 +19,6 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.3-servicemesh/frontend:v2
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.4-auth/frontend:v2
         ports:
         - containerPort: 80
