--- a/bookshop-demo/catalogue/k8s/catalogue-db.yaml
+++ b/bookshop-demo/catalogue/k8s/catalogue-db.yaml
@@ -33,6 +33,6 @@ spec:
     spec:
       containers:
       - name: catalogue-db
-        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.3-servicemesh/catalogue-db
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.4-auth/catalogue-db
         ports:
         - containerPort: 3306
