--- a/bookshop-demo/order/k8s/order-db.yaml
+++ b/bookshop-demo/order/k8s/order-db.yaml
@@ -34,6 +34,6 @@ spec:
     spec:
       containers:
       - name: order-db
-        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.3-servicemesh/order-db
+        image: registry.gitlab.com/gihyo-ms-dev-book/handson/sec3/3.4-auth/order-db
         ports:
         - containerPort: 27017
